# klever-certification-sc

./: .gitignore  README.md
issuer/: Cargo.toml  sc-config.toml
issuer/meta/: Cargo.toml
issuer/meta/src/: main.rs
issuer/scenarios/: issuer.scen.json  issuer_1_field_init.scen.json  issuer_base_init.scen.json  issuer_change_expiration_date.scen.json  issuer_check.scen.json  issuer_create.scen.json  issuer_deploy.scen.json  issuer_get_certificate_events.scen.json  issuer_proof.scen.json  issuer_revoke.scen.json  issuer_should_fail_field.scen.json  issuer_should_fail_proof.scen.json  issuer_should_fail_revoke.scen.json  issuer_should_work_1_field.scen.json  issuer_should_work_1_field_proof.scen.json  issuer_should_work_max_field.scen.json  issuer_should_work_max_field_proof.scen.json  issuer_should_work_revoke.scen.json  issuer_should_work_zero_expiration.json
issuer/src/: issuer.rs
issuer/tests/: issuer_scenario_go_test.rs  issuer_scenario_rs_test.rs
issuer/wasm/: Cargo.toml
issuer/wasm/src/: lib.rs
