[package]
name = "issuer"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/issuer.rs"
[dependencies.klever-sc]
version = "0.43.3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"

[workspace]
members = [".", "meta"]
