[package]
name = "issuer"
version = "0.0.1"
authors = ["Kleverchain Team"]
edition = "2021"
publish = false

[lib]
path = "src/issuer.rs"

[dependencies.klever-sc]
git = "https://github.com/klever-io/klever-vm-sdk-rs-internal"
rev = "0d90b14"
version = "*"
features = ["alloc"]


[dev-dependencies.klever-sc-scenario]
git = "https://github.com/klever-io/klever-vm-sdk-rs-internal"
rev = "0d90b14"
version = "*"

[workspace]
members = [".", "meta"]
