[package]
name = "issuer"
version = "0.0.1"
authors = ["Kleverchain Team"]
edition = "2021"
publish = false

[lib]
path = "src/issuer.rs"

[dependencies.klever-sc]
path = "/Users/beroni/klever/klever-vm-sdk-rs-internal/framework/base"
version = "*"
features = ["alloc"]

[dev-dependencies.klever-sc-scenario]
path = "/Users/beroni/klever/klever-vm-sdk-rs-internal/framework/scenario"
version = "*"

[workspace]
members = [".", "meta"]
